--- a/package.json
+++ b/package.json
@@ -6,31 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "db:migrate": "prisma migrate dev",
+    "db:generate": "prisma generate",
+    "db:seed": "tsx scripts/migrate-content.ts"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.0",
+    "lucide-react": "^0.344.0",
+    "next": "^14.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "next": "^14.2.0",
-    "framer-motion": "^11.0.0",
     "react-hook-form": "^7.50.0",
-    "zod": "^3.22.4",
-    "@hookform/resolvers": "^3.3.4",
-    "lucide-react": "^0.344.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "typescript": "^5.4.0",
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.0",
     "@types/react-dom": "^18.2.0",
     "autoprefixer": "^10.4.18",
+    "eslint": "^8.56.0",
+    "eslint-config-next": "^14.2.0",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
-    "eslint": "^8.56.0",
-    "eslint-config-next": "^14.2.0"
+    "tsx": "^4.21.0",
+    "typescript": "^5.4.0"
   }
 }
-
-
